--- a/app/src/main/res/drawable/view_grey_bg.xml
+++ b/app/src/main/res/drawable/view_grey_bg.xml
@@ -1,4 +1,7 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/light_blue_grey"/>
+    <corners android:radius="15dp"/>
 </shape>
+
+
