--- a/app/src/main/res/layout/fragment_calorie.xml
+++ b/app/src/main/res/layout/fragment_calorie.xml
@@ -267,7 +267,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="62dp"
                         android:elevation="4dp"
-                        android:visibility="invisible"
+                        android:visibility="visible"
                         android:background="@color/white"
                         app:cardCornerRadius="10dp"
                         android:layout_marginStart="20dp"
