--- a/app/src/main/res/layout/fragment_rating_snap_meal_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_rating_snap_meal_bottom_sheet.xml
@@ -9,8 +9,9 @@
 
     <ImageView
         android:id="@+id/closeIc"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:scaleType="fitXY"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:src="@drawable/close_breathwork"
@@ -44,7 +45,7 @@
             android:id="@+id/tv_delete_confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Rate this scan so we can keep improving your meal insights.Your feedback helps us learn faster."
+            android:text="Rate this scan so we can keep improving your meal insights. Your feedbacks helps us learn faster!"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="18sp"
