--- a/app/src/main/res/layout/activity_mrer_assessment_context_screen.xml
+++ b/app/src/main/res/layout/activity_mrer_assessment_context_screen.xml
@@ -22,8 +22,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Lifestyle &amp; Nutrition Assessment"
-                android:textSize="24sp"
+                android:text="Lifestyle &amp; \nNutrition Assessment"
+                android:textSize="26sp"
                 android:layout_marginTop="50dp"
                 android:gravity="center_horizontal"
                 android:fontFamily="@font/merriweather_bold"
@@ -208,9 +208,9 @@
         <Button
             android:id="@+id/btnNext"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:text="Next"
-            android:textSize="14sp"
+            android:textSize="20sp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/dmsans_bold"
             android:textColor="@color/white"
