--- a/app/src/main/res/layout/fragment_home_dashboard.xml
+++ b/app/src/main/res/layout/fragment_home_dashboard.xml
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/ll_dashboard_main_data"
-        android:visibility="gone"
+        android:visibility="visible"
         android:orientation="vertical">
 
         <LinearLayout
@@ -51,7 +51,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_move_right"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="164dp"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/light_red"
@@ -60,21 +60,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:padding="10dp">
+                    android:orientation="vertical">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/next_arrow_dashboard"
-                        android:layout_gravity="end" />
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="6dp"
+                        android:layout_marginTop="6dp"/>
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/move_right_dashboard"
                         android:layout_marginHorizontal="12dp"
-                        android:layout_marginVertical="8dp" />
+                        android:layout_marginTop="4dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -82,7 +83,7 @@
                         android:fontFamily="@font/dmsans_bold"
                         android:text="MoveRight"
                         android:layout_marginHorizontal="12dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="12dp"
                         android:textColor="@color/color_move_right"
                         android:textSize="18sp" />
 
@@ -102,7 +103,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_sleep_right"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="164dp"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/light_blue"
@@ -111,22 +112,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:padding="10dp">
+                    android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/move_right_next"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/next_arrow_dashboard"
-                        android:layout_gravity="end" />
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="6dp"
+                        android:layout_marginTop="6dp"/>
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/sleep_right_dashboard"
                         android:layout_marginHorizontal="12dp"
-                        android:layout_marginVertical="8dp" />
+                        android:layout_marginTop="4dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -134,7 +135,7 @@
                         android:fontFamily="@font/dmsans_bold"
                         android:text="SleepRight"
                         android:layout_marginHorizontal="12dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="12dp"
                         android:textColor="@color/color_sleep_right"
                         android:textSize="18sp" />
 
@@ -161,7 +162,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_think_right"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="164dp"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/light_yellow"
@@ -170,21 +171,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:padding="10dp">
+                    android:orientation="vertical">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/next_arrow_dashboard"
-                        android:layout_gravity="end" />
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="6dp"
+                        android:layout_marginTop="6dp"/>
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/think_right_dashboard"
                         android:layout_marginHorizontal="12dp"
-                        android:layout_marginVertical="8dp" />
+                        android:layout_marginTop="4dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -192,7 +194,7 @@
                         android:fontFamily="@font/dmsans_bold"
                         android:text="ThinkRight"
                         android:layout_marginHorizontal="12dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="12dp"
                         android:textColor="@color/color_think_right"
                         android:textSize="18sp" />
 
@@ -212,7 +214,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_eat_right"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="164dp"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/light_green"
@@ -221,21 +223,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:padding="10dp">
+                    android:orientation="vertical">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/next_arrow_dashboard"
-                        android:layout_gravity="end" />
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="6dp"
+                        android:layout_marginTop="6dp"/>
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/eat_right_dashboard"
                         android:layout_marginHorizontal="16dp"
-                        android:layout_marginVertical="8dp" />
+                        android:layout_marginTop="4dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -243,7 +246,7 @@
                         android:fontFamily="@font/dmsans_bold"
                         android:text="EatRight"
                         android:layout_marginHorizontal="12dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="12dp"
                         android:textColor="@color/color_sleep_right"
                         android:textSize="18sp" />
 
