--- a/app/src/main/res/layout/activity_welcome_think_right_context_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_think_right_context_screen.xml
@@ -22,12 +22,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Welcome To"
-                android:textSize="22sp"
                 android:layout_marginTop="80dp"
+                android:fontFamily="@font/dmsans_bold"
                 android:gravity="center_horizontal"
-                android:fontFamily="@font/merriweather_bold"
-                android:textColor="@color/txt_color_mind" />
+                android:text="Welcome to"
+                android:textColor="@color/txt_color_mind"
+                android:textSize="22sp" />
 
             <TextView
                 android:layout_width="match_parent"
