--- a/app/src/main/res/layout/fragment_sleep_performance.xml
+++ b/app/src/main/res/layout/fragment_sleep_performance.xml
@@ -47,6 +47,7 @@
             android:layout_width="match_parent"
             android:paddingBottom="70dp"
             android:layout_height="wrap_content">
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/sleep_perform_card"
                 android:layout_width="match_parent"
@@ -60,10 +61,12 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:paddingBottom="30dp"
                     android:layout_height="match_parent">
+
                     <RadioGroup
                         android:id="@+id/tabGroup"
                         android:layout_width="match_parent"
@@ -90,6 +93,7 @@
                             android:gravity="center"
                             android:button="@null"
                             android:checked="true"/>
+
                         <RadioButton
                             android:id="@+id/rbMonth"
                             android:layout_width="0dp"
@@ -125,6 +129,7 @@
                         android:src="@drawable/sleep_right_icon"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tabGroup" />
+
                     <ImageView
                         android:id="@+id/btn_next"
                         android:layout_width="24dp"
@@ -134,6 +139,7 @@
                         android:layout_marginTop="14dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tabGroup"/>
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -145,6 +151,7 @@
                         app:layout_constraintBottom_toBottomOf="@+id/btn_next"
                         app:layout_constraintStart_toEndOf="@+id/btn_prev"
                         app:layout_constraintEnd_toStartOf="@+id/btn_next"/>
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
@@ -153,6 +160,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/btn_prev"/>
+
                     <TextView
                         android:id="@+id/average_text_heading"
                         android:layout_width="wrap_content"
@@ -165,6 +173,7 @@
                         android:textColor="@color/black"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"/>
+
                     <TextView
                         android:id="@+id/tv_sleep_perform_average"
                         android:layout_width="wrap_content"
@@ -176,6 +185,7 @@
                         android:layout_marginStart="21dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/average_text_heading"/>
+
                     <ImageView
                         android:id="@+id/percentage_icon"
                         android:layout_width="12dp"
@@ -185,6 +195,7 @@
                         android:layout_marginStart="21dp"
                         app:layout_constraintTop_toBottomOf="@+id/tv_sleep_perform_average"
                         app:layout_constraintStart_toStartOf="parent"/>
+
                     <TextView
                         android:id="@+id/percentage_text"
                         android:layout_width="wrap_content"
@@ -196,54 +207,66 @@
                         android:textColor="@color/green_text"
                         app:layout_constraintBottom_toBottomOf="@+id/percentage_icon"
                         app:layout_constraintStart_toEndOf="@+id/percentage_icon"/>
+
                     <androidx.cardview.widget.CardView
                         android:id="@+id/card_percent"
-                        android:layout_width="80dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:elevation="4dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:background="@drawable/white_meal_date_bg"
                         app:cardCornerRadius="10dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="20dp"
                         app:layout_constraintTop_toTopOf="@id/tv_sleep_perform_average"
                         app:layout_constraintEnd_toEndOf="parent">
+
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
-                            android:padding="5dp"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:paddingStart="10dp"
+                            android:paddingEnd="10dp"
                             android:layout_height="match_parent">
+
                             <TextView
                                 android:id="@+id/tv_bar_date"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="9 Feb, 2025"
                                 android:textSize="10sp"
-                                android:textColor="@color/black"
+                                android:fontFamily="@font/dmsans_regular"
+                                android:textColor="@color/black_no_meals"
                                 android:layout_marginTop="5dp"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"/>
+
                             <TextView
                                 android:id="@+id/tv_bar_percent"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="50"
-                                android:textSize="20sp"
+                                android:fontFamily="@font/dmsans_bold"
+                                android:textSize="32sp"
                                 android:layout_marginStart="10dp"
-                                android:textColor="@color/black"
+                                android:textColor="@color/black_no_meals"
                                 app:layout_constraintTop_toBottomOf="@+id/tv_bar_date"
                                 app:layout_constraintStart_toStartOf="parent"/>
+
                             <TextView
                                 android:id="@+id/percent_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="%"
                                 android:textSize="10sp"
+                                android:fontFamily="@font/dmsans_regular"
                                 android:layout_marginStart="1dp"
-                                android:textColor="@color/black"
+                                android:textColor="@color/black_no_meals"
                                 app:layout_constraintTop_toTopOf="@+id/tv_bar_percent"
                                 app:layout_constraintBottom_toBottomOf="@+id/tv_bar_percent"
                                 app:layout_constraintStart_toEndOf="@+id/tv_bar_percent"/>
+
                             <ImageView
                                 android:id="@+id/percent_icon"
                                 android:layout_width="15dp"
@@ -256,23 +279,26 @@
                                 app:layout_constraintStart_toEndOf="@+id/percent_text"/>
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:padding="5dp"
-                        android:layout_marginTop="15dp"
-                        app:layout_constraintTop_toBottomOf="@+id/percentage_text"
+                        android:layout_marginTop="10dp"
+                        app:layout_constraintTop_toBottomOf="@+id/card_percent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:id="@+id/lyt_chart">
+
                         <com.github.mikephil.charting.charts.BarChart
                             android:id="@+id/heartRateChart"
                             android:layout_width="match_parent"
                             android:layout_height="350dp"
                             android:layout_marginTop="5dp"
                             android:paddingBottom="5dp"
+
                             />
                         <FrameLayout
                             android:layout_width="match_parent"
@@ -296,6 +322,7 @@
                             </FrameLayout>
 
                         </FrameLayout>
+
                         <androidx.appcompat.widget.LinearLayoutCompat
                             android:id="@+id/averageGoalLayout"
                             android:layout_width="match_parent"
@@ -324,13 +351,13 @@
                                     android:textSize="12sp"
                                     android:textColor="@color/text_color_kcal"
                                     />
-
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="A"
-                                    android:padding="2dp"
-                                    android:background="@color/text_color_kcal"
+                                    android:paddingHorizontal="3dp"
+                                    android:paddingVertical="3dp"
+                                    android:background="@drawable/rounded_text_bg"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/dmsans_regular"
                                     android:textSize="10sp"
@@ -393,6 +420,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/sleep_perform_nocard"
                 android:layout_width="match_parent"
