--- a/app/src/main/res/layout/fragment_sleep_stages.xml
+++ b/app/src/main/res/layout/fragment_sleep_stages.xml
@@ -89,23 +89,22 @@
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 android:id="@+id/tv_total_sleep"
-                                android:text="Total Sleep"
-                                android:textSize="14sp"
-                                android:textColor="#082654"
+                                android:text="Total Sleep:"
+                                android:textSize="13sp"
+                                android:textColor="#002C5F"
                                 android:fontFamily="@font/dmsans_regular"
-                                android:layout_weight="3"
                                 android:paddingStart="8dp" />
 
                             <TextView
-                                android:layout_width="0dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="8hr 30min"
-                                android:textSize="14sp"
+                                android:textSize="15sp"
                                 android:id="@+id/tv_stage_total_sleep"
-                                android:textColor="#082654"
+                                android:textColor="#002C5F"
                                 app:layout_constraintStart_toEndOf="@id/tv_total_sleep"
                                 app:layout_constraintTop_toTopOf="parent"
-                                android:fontFamily="@font/dmsans_medium"
+                                android:fontFamily="@font/dmsans_bold"
                                 android:paddingStart="8dp" />
 
                             <ImageView
@@ -162,10 +161,12 @@
                                 android:layout_height="wrap_content"
                                 android:id="@+id/tv_stage_start_time"
                                 android:fontFamily="@font/dmsans_regular"
-                                android:drawableStart="@drawable/sleep_bed_mini_icon"
+                                android:drawableStart="@drawable/ic_sleep_bad"
                                 app:layout_constraintStart_toEndOf="@+id/img_start_graph"
                                 android:layout_marginStart="5dp"
                                 android:layout_marginTop="5dp"
+                                android:gravity="center"
+                                android:paddingStart="3dp"
                                 app:layout_constraintTop_toBottomOf="@id/sleepChart"
                                 android:text=" 9:00 pm"
                                 android:textSize="12sp" />
@@ -173,12 +174,14 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:drawableStart="@drawable/yellow_timer"
+                                android:drawableStart="@drawable/ic_sleep_clock"
                                 app:layout_constraintEnd_toStartOf="@+id/img_end_graph"
                                 app:layout_constraintTop_toBottomOf="@id/sleepChart"
                                 android:layout_marginEnd="5dp"
                                 android:layout_marginTop="5dp"
                                 android:layout_weight="1"
+                                android:gravity="center"
+                                android:paddingStart="3dp"
                                 android:fontFamily="@font/dmsans_regular"
                                 android:id="@+id/tv_stage_end_time"
                                 android:text=" 5:30 am"
