Following issues are resolved 1. RAD-4435: Android || QA-117 || checklist || ER+MR questionaries-que. no 8, Font of number entered in textbox is not in bold. 2. RAD-4436: Android || QA-117 || checklist || ER+MR questionaries-que. no 9, Duration shown on the scroller are not in bold. 3. RAD-4433: Android || QA-117 || checklist || After completing profile questionnaire user is redirecting on incorrect screen, redirecting on Home screen instead of My Health. 4. RAD-4445: [Android][QA][Face scan]Face Scan – Default Age Selection Not Reflected on Your Details Page 5. RAD-4459: Android>QA(117)>Home page>Jump Back In detailed page>popup text is not as per design for add and delete from bookmark 6. RAD-4491: [Android][QA][Checklist]Checklist – "How often do you find yourself overthinking?" Options Font Not as per Design 7. RAD-4493: [Android][QA][Checklist]Checklist – "Do these keep you awake at night?" Font Not as per Design 8. RAD-4494: [Android][QA][Checklist]Checklist – "Sleep Through the Night" Text Alignment Issue 9. RAD-4571: [Andro][QA][Onboarding]Text color on goal card doesn't change when selected 10. RAD-4575: [Android][QA][Onboarding]Incorrect toast message when there is no internet connection 11. RAD-4578: [Android][QA][Onboarding]Incorrect behavior when no internet connection and user tries to save 12. RAD-4591: [Android][QA][Onboarding] Incorrect font style and size for option text 13. RAD-4593: [Android][QA][Onboarding] No toast message appears when fewer than two options are selected. 14. RAD-4594: [Android][QA][Onboarding] Close button size is too small on Enable Notifications screen 15. RAD-4596: [Android][QA][Onboarding] Incorrect text in yellow box on Enable Notifications screen 16. RAD-4595: [Android][QA][Onboarding] Extra space below yellow box on Enable Notifications screen 17. RAD-4597: [Android][QA][Onboarding] Incorrect text under Daily Reminders section 18. RAD-4635: Android>QA(120)ThinkRight>Journalling>Listing page>Free form, bullet, gratitude 

--- a/app/src/main/res/layout/activity_enable_notification.xml
+++ b/app/src/main/res/layout/activity_enable_notification.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent">
 
     <ScrollView
+        android:id="@+id/scollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:layout_above="@id/btn_enable_notification">
+        android:layout_height="wrap_content"
+        android:fillViewport="true">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view_consistency"
@@ -24,8 +24,8 @@
 
                 <ImageView
                     android:id="@+id/imageClose"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     android:src="@drawable/close"
                     app:tint="@color/black"
                     android:layout_alignParentEnd="true"
@@ -144,7 +144,7 @@
                             android:layout_below="@+id/tv_personalise_insights"
                             android:layout_marginStart="16dp"
                             android:fontFamily="@font/dmsans_regular"
-                            android:text="Stay on track with affirmations, workouts, workout analysis and more."
+                            android:text="Stay on track with affirmations, workouts, and more."
                             android:textColor="@color/txt_color_header"
                             android:textSize="@dimen/textsize_medium" />
 
@@ -256,7 +256,7 @@
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/dmsans_regular"
                         android:gravity="center"
-                        android:text="You are 2.4x more likely to achieve your goals!"
+                        android:text="You Are 2.4X More Likely To Achieve Your Goals."
                         android:textColor="@color/txt_color_header"
                         android:textSize="12sp" />
 
@@ -272,9 +272,9 @@
         android:id="@+id/btn_enable_notification"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@id/scollView"
         android:layout_marginHorizontal="36dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginVertical="24dp"
         android:backgroundTint="@color/menuselected"
         android:fontFamily="@font/dmsans_bold"
         android:text="Enable Notifications"
