--- a/app/src/main/res/layout/bottomsheet_awake_night.xml
+++ b/app/src/main/res/layout/bottomsheet_awake_night.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:fontFamily="@font/dmsans_bold"
+        android:fontFamily="@font/merriweather_bold"
         android:gravity="center"
         android:text="Do these keep you awake at night?"
         android:textColor="@color/txt_color_header"
