--- a/app/src/main/res/layout/activity_journal_new.xml
+++ b/app/src/main/res/layout/activity_journal_new.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:fontFamily="@font/dmsans_bold"
+        android:fontFamily="@font/merriweather_bold"
         android:text="Journal"
         android:textColor="@color/txt_color_mind"
         android:textSize="24sp" />
