--- a/app/src/main/res/layout/fragment_exercise_preference.xml
+++ b/app/src/main/res/layout/fragment_exercise_preference.xml
@@ -40,6 +40,7 @@
                 android:background="@android:color/transparent"
                 android:gravity="center"
                 android:textSize="16sp"
+                android:fontFamily="@font/dmsans_bold"
                 android:padding="8dp"
                 android:maxLength="2"
                 android:focusable="true"
