--- a/app/src/main/res/layout/fragment_overthining_yourself.xml
+++ b/app/src/main/res/layout/fragment_overthining_yourself.xml
@@ -44,7 +44,7 @@
                 android:textSize="24sp"
                 android:layout_above="@+id/rl_triangle"
                 android:layout_centerInParent="true"
-                android:textStyle="bold" />
+                android:fontFamily="@font/dmsans_bold" />
 
             <RelativeLayout
                 android:layout_width="320dp"
