--- a/app/src/main/res/layout/item_sleep_option.xml
+++ b/app/src/main/res/layout/item_sleep_option.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/txt_color_header"
         android:textSize="16sp"
+        android:gravity="center_horizontal"
         android:fontFamily="@font/dmsans_regular"
         android:layout_marginTop="8dp" />
 
