--- a/app/src/main/res/layout/layout_seriesepisodelist_item.xml
+++ b/app/src/main/res/layout/layout_seriesepisodelist_item.xml
@@ -33,17 +33,28 @@
             android:layout_weight="0.6"
             app:cardCornerRadius="@dimen/margin_card_16dp"
             android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="90dp">
+
         <ImageView
             android:id="@+id/item_image"
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:scaleType="fitXY"
             android:src="@drawable/facial_scan" />
+                <ImageView
+                    android:id="@+id/item_type_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_playrledit" />
+            </RelativeLayout>
         </androidx.cardview.widget.CardView>
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:padding="5dp"
+
             android:layout_marginHorizontal="@dimen/margin_card_16dp"
             android:layout_weight="0.4"
             android:visibility="visible"
@@ -106,10 +117,12 @@
 
             <TextView
                 android:id="@+id/item_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:fontFamily="@font/dmsans_bold"
                 android:text="Category title"
+                android:layout_gravity="center"
+                android:gravity="center_vertical"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
         </LinearLayout>
